--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:AngularProject": "node dist/angular-project/server/server.mjs"
+    "serve:ssr:AngularProject": "node dist/angular-project/server/server.mjs",
+    "start:json-server": "json-server \"./JSON Server/db.json\" --port 3000"
+    
   },
   "private": true,
   "dependencies": {
